examples/fail/semantic/void_param.bina
// EXPECT_SEMANTIC_ERROR: parameter 'x' cannot have type void
fn f(x: void) -> int32 {
    return 0;
}

fn main() -> int {
    return f(print("x"));
}
